Final HTML files.

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <body>
     {% block body %}
     <form method="post" action="/sendText">
-        <input class="btn btn-primary" style="position: absolute;top:50%;left:45%" type="submit" value="Get Started" name="action1"/>
+        <input class="btn btn-primary" style="position: absolute;top:50%;left:45%" type="submit" value="Get Started" name="gotoSend"/>
     </form>
     {% endblock %}
 </body>
